testdata/typechecker/error/portfolio_DupeParamVarFuncIncompat.java
// Tests that duplicate and incompatible function parameters and variables error.

int main() {
    return 0;
}

int f(int x) {
    boolean x;
    return 0;
}
